<resources>
    <string name="app_name">AlienClass</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="friday">FRI</string>
    <string name="thursday">THU</string>
    <string name="wednesday">WED</string>
    <string name="tuesday">TUE</string>
    <string name="time">Time</string>
    <string name="monday">MON</string>
    <string name="columnHeight">60</string>
    <string name="columnWidth">60</string>
</resources>